--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>SnapCharm</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gradient-to-b from-white via-pink-50 to-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
